openfgdb4j/native/include/openfgdb_c_api.h

OFGDB_API int ofgdb_set_double(uint64_t row_handle, const char *column_name, double value);
OFGDB_API int ofgdb_set_blob(uint64_t row_handle, const char *column_name, const uint8_t *data, int32_t size);
OFGDB_API int ofgdb_set_geometry(uint64_t row_handle, const uint8_t *wkb, int32_t size);
OFGDB_API int ofgdb_set_null(uint64_t row_handle, const char *column_name);
OFGDB_API int ofgdb_list_domains(uint64_t db_handle, uint64_t *cursor_handle);
OFGDB_API int ofgdb_create_coded_domain(uint64_t db_handle, const char *domain_name, const char *field_type);