openfgdb4j/src/generated/java/ch/ehi/openfgdb4j/ffm/OpenFgdbNative.java


    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int ofgdb_set_double(uint64_t row_handle, const char *column_name, double value)
     * }
     */
    public static MethodHandle ofgdb_set_double$handle() {
        return ofgdb_set_double.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int ofgdb_set_double(uint64_t row_handle, const char *column_name, double value)
     * }
     */
    public static MemorySegment ofgdb_set_double$address() {
        return ofgdb_set_double.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int ofgdb_set_double(uint64_t row_handle, const char *column_name, double value)
     * }
     */
    public static int ofgdb_set_double(long row_handle, MemorySegment column_name, double value) {
        var mh$ = ofgdb_set_double.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("ofgdb_set_double", row_handle, column_name, value);
            }
            return (int)mh$.invokeExact(row_handle, column_name, value);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class ofgdb_set_blob {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            OpenFgdbNative.C_INT,
            OpenFgdbNative.C_LONG_LONG,
            OpenFgdbNative.C_POINTER,
            OpenFgdbNative.C_POINTER,
            OpenFgdbNative.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("ofgdb_set_blob").orElseThrow(() -> new IllegalStateException("Native symbol not found: ofgdb_set_blob"));

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int ofgdb_set_blob(uint64_t row_handle, const char *column_name, const uint8_t *data, int32_t size)
     * }
     */
    public static FunctionDescriptor ofgdb_set_blob$descriptor() {
        return ofgdb_set_blob.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int ofgdb_set_blob(uint64_t row_handle, const char *column_name, const uint8_t *data, int32_t size)
     * }
     */
    public static MethodHandle ofgdb_set_blob$handle() {
        return ofgdb_set_blob.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int ofgdb_set_blob(uint64_t row_handle, const char *column_name, const uint8_t *data, int32_t size)
     * }
     */
    public static MemorySegment ofgdb_set_blob$address() {
        return ofgdb_set_blob.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int ofgdb_set_blob(uint64_t row_handle, const char *column_name, const uint8_t *data, int32_t size)
     * }
     */
    public static int ofgdb_set_blob(long row_handle, MemorySegment column_name, MemorySegment data, int size) {
        var mh$ = ofgdb_set_blob.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("ofgdb_set_blob", row_handle, column_name, data, size);
            }
            return (int)mh$.invokeExact(row_handle, column_name, data, size);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class ofgdb_set_geometry {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            OpenFgdbNative.C_INT,
            OpenFgdbNative.C_LONG_LONG,
            OpenFgdbNative.C_POINTER,
            OpenFgdbNative.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("ofgdb_set_geometry").orElseThrow(() -> new IllegalStateException("Native symbol not found: ofgdb_set_geometry"));

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int ofgdb_set_geometry(uint64_t row_handle, const uint8_t *wkb, int32_t size)
     * }
     */
    public static FunctionDescriptor ofgdb_set_geometry$descriptor() {
        return ofgdb_set_geometry.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int ofgdb_set_geometry(uint64_t row_handle, const uint8_t *wkb, int32_t size)
     * }
     */
    public static MethodHandle ofgdb_set_geometry$handle() {
        return ofgdb_set_geometry.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int ofgdb_set_geometry(uint64_t row_handle, const uint8_t *wkb, int32_t size)
     * }
     */
    public static MemorySegment ofgdb_set_geometry$address() {
        return ofgdb_set_geometry.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int ofgdb_set_geometry(uint64_t row_handle, const uint8_t *wkb, int32_t size)
     * }
     */
    public static int ofgdb_set_geometry(long row_handle, MemorySegment wkb, int size) {
        var mh$ = ofgdb_set_geometry.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("ofgdb_set_geometry", row_handle, wkb, size);
            }
            return (int)mh$.invokeExact(row_handle, wkb, size);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class ofgdb_set_null {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            OpenFgdbNative.C_INT,
            OpenFgdbNative.C_LONG_LONG,
            OpenFgdbNative.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("ofgdb_set_null").orElseThrow(() -> new IllegalStateException("Native symbol not found: ofgdb_set_null"));

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int ofgdb_set_null(uint64_t row_handle, const char *column_name)
     * }
     */
    public static FunctionDescriptor ofgdb_set_null$descriptor() {
        return ofgdb_set_null.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int ofgdb_set_null(uint64_t row_handle, const char *column_name)
     * }
     */
    public static MethodHandle ofgdb_set_null$handle() {
        return ofgdb_set_null.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int ofgdb_set_null(uint64_t row_handle, const char *column_name)
     * }
     */
    public static MemorySegment ofgdb_set_null$address() {
        return ofgdb_set_null.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int ofgdb_set_null(uint64_t row_handle, const char *column_name)
     * }
     */
    public static int ofgdb_set_null(long row_handle, MemorySegment column_name) {
        var mh$ = ofgdb_set_null.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("ofgdb_set_null", row_handle, column_name);
            }
            return (int)mh$.invokeExact(row_handle, column_name);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class ofgdb_list_domains {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            OpenFgdbNative.C_INT,
            OpenFgdbNative.C_LONG_LONG,
            OpenFgdbNative.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("ofgdb_list_domains").orElseThrow(() -> new IllegalStateException("Native symbol not found: ofgdb_list_domains"));

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int ofgdb_list_domains(uint64_t db_handle, uint64_t *cursor_handle)
     * }
     */
    public static FunctionDescriptor ofgdb_list_domains$descriptor() {
        return ofgdb_list_domains.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int ofgdb_list_domains(uint64_t db_handle, uint64_t *cursor_handle)
     * }
     */
    public static MethodHandle ofgdb_list_domains$handle() {
        return ofgdb_list_domains.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int ofgdb_list_domains(uint64_t db_handle, uint64_t *cursor_handle)
     * }
     */
    public static MemorySegment ofgdb_list_domains$address() {
        return ofgdb_list_domains.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int ofgdb_list_domains(uint64_t db_handle, uint64_t *cursor_handle)
     * }
     */
    public static int ofgdb_list_domains(long db_handle, MemorySegment cursor_handle) {
        var mh$ = ofgdb_list_domains.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("ofgdb_list_domains", db_handle, cursor_handle);
            }
            return (int)mh$.invokeExact(db_handle, cursor_handle);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class ofgdb_create_coded_domain {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            OpenFgdbNative.C_INT,
            OpenFgdbNative.C_LONG_LONG,
            OpenFgdbNative.C_POINTER,
            OpenFgdbNative.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("ofgdb_create_coded_domain").orElseThrow(() -> new IllegalStateException("Native symbol not found: ofgdb_create_coded_domain"));

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int ofgdb_create_coded_domain(uint64_t db_handle, const char *domain_name, const char *field_type)
     * }
     */
    public static FunctionDescriptor ofgdb_create_coded_domain$descriptor() {
        return ofgdb_create_coded_domain.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int ofgdb_create_coded_domain(uint64_t db_handle, const char *domain_name, const char *field_type)
     * }
     */
    public static MethodHandle ofgdb_create_coded_domain$handle() {
        return ofgdb_create_coded_domain.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int ofgdb_create_coded_domain(uint64_t db_handle, const char *domain_name, const char *field_type)
     * }
     */
    public static MemorySegment ofgdb_create_coded_domain$address() {
        return ofgdb_create_coded_domain.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int ofgdb_create_coded_domain(uint64_t db_handle, const char *domain_name, const char *field_type)
     * }
     */
    public static int ofgdb_create_coded_domain(long db_handle, MemorySegment domain_name, MemorySegment field_type) {
        var mh$ = ofgdb_create_coded_domain.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("ofgdb_create_coded_domain", db_handle, domain_name, field_type);
            }
            return (int)mh$.invokeExact(db_handle, domain_name, field_type);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }
